@@ -1,3 +1,7 @@
+2008-12-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* gio/gio-sections.txt: Add new functions
+
 2008-12-07  Behdad Esfahbod  <behdad@gnome.org>
 
 	Bug 563156 – Document printing and scanning gunichar values
